tests/baselines/reference/mergedModuleDeclarationCodeGen.errors.txt
tests/cases/compiler/mergedModuleDeclarationCodeGen.ts(1,15): error TS1148: Cannot compile external modules unless the '--module' flag is provided.


==== tests/cases/compiler/mergedModuleDeclarationCodeGen.ts (1 errors) ====
    export module X {
                  ~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
        export module Y {
            class A {
                constructor(Y: any) {
                    new B();
                }
            }
        }
    }
    export module X {
        export module Y {
            export class B {
            }
        }
    }